<resources>
    <string name="app_name">ezHoop</string>

    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="text_or">OR</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="btn_start_training">Start Training</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_continue_as_guest">Continue As Guest</string>
    <string name="btn_home">Home</string>
    <string name="btn_statistics">Statistics</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_photo">Photo</string>
    <string name="btn_continue">Continue</string>

    <string name="text_set_timer">Set Your Timer</string>
    <string name="text_adjust_timer">Drag To Adjust Timer</string>
    <string name="text_workout">Workout 1</string>
    <string name="checkBox_record_session">Record Session</string>
    <string name="text_shooting">Shooting</string>
    <string name="btn_timer">3 Mins</string>
    <string name="btn_rounds">2 Rounds</string>
    <string name="text_start_command">Say "START" or press the START button to begin timer.</string>
    <string name="btn_start">Start</string>
    <string name="btn_end">End</string>
    <string name="btn_view_recording">View Recordings</string>

    <string name="text_profile_name">Louise O Connor</string>
    <string name="text_shooting_average">Average \nShooting \nPercentage</string>
    <string name="text_shooting_percentage">37%</string>
    <string name="text_profile_email">louiseoconnor@gmail.com</string>
    <string name="text_profile_location">Dundalk, Co. Louth</string>
    <string name="text_profile_date_of_birth">June 6, 2002</string>
    <string name="text_profile_gender">Female</string>

    <string name="text_statistic">Statistic</string>
    <string name="btn_view_players">View More Players</string>
    <string name="btn_view_recordings">View Recording</string>
    <string name="text_shots">Shots</string>
    <string name="text_missed">Missed</string>
    <string name="text_percentages">Percentages</string>

</resources>