<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_shotsNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_missedNumber1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <TextView
        android:id="@+id/text_missedNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_percentageNumber1"
        app:layout_constraintStart_toEndOf="@+id/text_shotsNumber1"
        app:layout_constraintTop_toTopOf="@+id/text_shotsNumber1"
        tools:text="0" />

    <TextView
        android:id="@+id/text_percentageNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_missedNumber1"
        app:layout_constraintTop_toTopOf="@+id/text_missedNumber1"
        tools:text="0%" />

    <TextView
        android:id="@+id/text_shots1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_shotsNumber1"
        app:layout_constraintStart_toStartOf="@+id/text_shotsNumber1"
        app:layout_constraintTop_toBottomOf="@+id/text_shotsNumber1"
        tools:text="@string/text_shots" />

    <TextView
        android:id="@+id/text_missed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_missed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_missedNumber1"
        app:layout_constraintStart_toStartOf="@+id/text_missedNumber1"
        app:layout_constraintTop_toBottomOf="@+id/text_missedNumber1" />

    <TextView
        android:id="@+id/text_percentages1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_percentages"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_percentageNumber1"
        app:layout_constraintStart_toStartOf="@+id/text_percentageNumber1"
        app:layout_constraintTop_toBottomOf="@+id/text_percentageNumber1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="88dp"
        android:background="@color/white"
        android:src="@drawable/ppl1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>